bug fix: image height and content were not of equal size, solve by adding overflow to the content keeping image size at 100vh

--- a/style.css
+++ b/style.css
@@ -7,50 +7,71 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: "Open Sans", sans-serif;
 }
 
 .wrapper-container{
     height: 100%;
     display: flex;
+    /* align-items: stretch; */
 }
 
-.sign-up-image img{
+img{
     height: 100vh;
     max-width: 50vw;
 }
 
+.sign-up-form{
+    height: 100vh;
+    background-color: #dfdfdf;
+    display: flex;
+    flex-direction: column;
+    overflow: scroll;
+}
+
+/* .heading_text, */
+form{
+    flex: 1;
+}
+
 .heading_text{
-    padding: 121px 100px 80px 40px;
-    height: 300px;
+    padding: 121px 100px 80px 55px;
     font-weight: bolder;
     font-size: 20px;
     background: linear-gradient(to right, hwb(197 60% 8%), hwb(37 79% 14%));
 }
 
 .heading_text> :first-child{
-   margin-bottom: 30px;
+   padding-bottom: 30px;
 }
+/* 
+.heading_text> :first-child p{
+    min-width: 300px;
+} */
 
-.form-wrapper{
+.form{
+    padding-bottom: 25px;
     background-color: #ebe6e1;
-    padding-bottom: 20px;
-    padding-left: 40px;
+    padding-left: 55px;
    
 }
 
-.form-wrapper> :first-child{
+.form> :first-child p{
+    display: block;
     padding: 15px 0 20px 0px;
     font-weight: bolder;
     font-size: 20px;
 }
 
-.form{
-   width: 500px;
+.form-input{
+    width: 500px;
     display: flex;
-    flex-direction: row ;
-    flex-wrap: wrap;
+    flex-direction: row;
+    /* flex-wrap: wrap; */
     justify-content: space-between;
+    background-color: #ebe6e1;
     height: 140px;
+   
 }
 
 .input-contact{
@@ -95,14 +116,13 @@ button{
 button{
     margin-top: 28px;
     margin-bottom: 28px;
-    margin-left: 40px;
+    margin-left: 55px;
     border-radius: 4px;
     width: 120px;
     height: 25px;
     background-color: #74006e;
     color: whitesmoke;
     box-shadow: 0px 2px 2px #474646;
-    
     cursor: pointer;
     transition: transform 0.2sec ease;
 }
@@ -119,8 +139,8 @@ button:active{
     background-color: #dfdfdf;
 }
 
-.sign-up-form> :last-child p{
-    margin-left: 40px;
+button + p {
+    margin-left: 55px;
     font-weight: 550;
     font-size: 14px;
 }
